--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="colorAccent">#FF4081</color>
     <color name="style">#4ddad589</color>
     <color name="color_C71585">#C71585</color>
+    <color name="traffic">#FFEB3B</color>
 </resources>
